--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,5 +43,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.2'
     implementation 'com.google.android.material:material:1.3.0-alpha03'
+    implementation 'androidx.core:core-splashscreen:1.0.0-alpha02'
 
 }
